# agent-run-ocaml

./: .gitignore  .ocamlformat  AGENT.md  FEATURE.md  README.md  TODO.md  agent-run.opam  dune-project  feature.md
lib/: agent.ml  agent.mli  cli.ml  cli.mli  config.ml  config.mli  dune  exec_program.ml  gemini_agent.ml  http_client.ml  list_files.ml  logging.ml  math_tools.ml  ollama_agent.ml  openai_agent.ml  read_file.ml  skill.ml  skill.mli  skill_registry.ml  skill_registry.mli  tool.ml  tool.mli  tool_registry.ml  weather_tool.ml  write_file.ml
lib/tools/: edit_file.ml  exec_command.ml  exec_program.ml  fetch_url.ml  get_weather.json  list_files.ml  path_guard.ml  read_file.ml  write_file.ml
skills/: caveman.md  playwright-cli.md  playwright-cli.skill.md
test/: agent_test.ml  dune  http_mock.ml  http_mock.mli  mock_platform.ml  mock_weather_tool.ml  test_agent_run.ml  test_cli.ml  test_config.mli  test_config_parsing.ml  test_edit_file.ml  test_exec_program.ml  test_fetch_url.ml  test_file_access_scope.ml  test_gemini_agent.ml  test_ollama_agent.ml  test_openai_agent.ml  test_skill.ml  test_skill_registry.ml  test_suite.ml  test_tool.ml  test_tool_registry.ml  test_tools_provider.ml
test/data/gemini/: error.json  response.json  tool_call_request.json  tool_call_response.json  tool_final_request.json  tool_final_response.json
test/data/ollama/: error.json  response.json  tool_call_request.json  tool_call_response.json  tool_final_request.json  tool_final_response.json  toolcall.json
test/data/openai/: error.json  response.json  tool_call_request.json  (+4 more)
